# Toy-Brain-Cpp

./: .gitignore  README.md
Toy-Brain/: CMakeLists.txt  Doxyfile
Toy-Brain/src/: CMakeLists.txt  toy-brain.cpp  toy-brain.h
Toy-Brain/toy_brain/: CMakeLists.txt  toy_brain.cpp  toy_brain.h  toy_brain_main.cpp
Toy-Brain/toy_brain/examples/: perceptron.cpp
Toy-Brain/toy_brain/src/: helper_functions.cpp  helper_functions.h  models.cpp  models.h
Toy-Brain/toy_brain/src/models/: activation_function.h  layer.cpp  layer.h  neuron.cpp  neuron.h
